--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   form_validator: ^1.0.1
   google_fonts: ^2.3.2
   fluttertoast: ^8.0.9
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
